# lofipad

./: .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-desktop.yml  deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
public/: electron.js  preload.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Editor.tsx  Releases.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/hooks/: useNotes.ts  useSettings.ts
